--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -78,6 +78,13 @@ button:hover {
     margin: 0px;
 }
 
+.amenities .popover ul input {
+    height: 10px;
+    width: 10px;
+    float: left;
+    text-align: center;
+}
+
 .locations .popover {
     margin-top: 0%;
 }
