--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,9 +3,24 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    /* display: flex;
+    justify-content: space-between; */
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+}
+
+#api_status {
+    right: 30px;
+    /* align-self: center; */
+    border-radius: 100%;
+    width: 40px;
+    text-align: center;
+    background-color: #CCCCCC;
+}
+
+.available {
+    background-color: #ff545f;
 }
